add demo-5 shadow

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</div>
 	<p>
 		「&nbsp;&nbsp;hover扩散标记效果&nbsp;&nbsp;」<br/>
-		——若需要动画自适应变宽，可a的宽度用padding灵活调整——
+		——若需要动画自适应变宽，可a的宽度用padding调整成适应文字宽度——
 	</p>
 	<div id="demo4">
 		<!-- 搜索框弹出效果 -->
