--- a/index.html
+++ b/index.html
@@ -93,6 +93,22 @@
 	<p>
 	「&nbsp;&nbsp;hover显示遮罩特效&nbsp;&nbsp;」
 	</p>
+	<div id="demo7">
+		<!-- 炫酷特效 -->
+		<div class="demo7-box">
+			<div class="img-box">
+				<img src="img2.jpg" title="show up">
+			</div>
+			
+			<div class="text-box">
+				<h3><a href="#">Hover on the picture</a></h3>
+				<p>The img will be dim, and explanation show above it.</p>
+			</div>
+		</div>
+	</div>
+	<p>
+	「&nbsp;&nbsp;hover升起特效&nbsp;&nbsp;」
+	</p>
 
 
 
