--- a/index.html
+++ b/index.html
@@ -18,7 +18,69 @@
 			</ul>
 		</nav>
 	</div>
-	<p>「&nbsp;&nbsp;hover添加底部托盘效果&nbsp;&nbsp;」</p>
+	<p class="title">「&nbsp;&nbsp;hover添加底部托盘效果&nbsp;&nbsp;」——显示CSS</p>
+	<textarea class="code">nav {
+    height: 80px;
+    background: #000;
+}
+
+nav ul {
+    display:    -moz-flex;
+    display:     -ms-flex;
+    display:  -ms-flexbox; /*兼容ie10*/
+    display: -webkit-flex;
+    display:         flex; /*实现子元素等分效果*/
+}
+
+nav li {
+    position: relative;
+
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+       -moz-flex: 1;
+}
+
+nav a {
+    font-size: 36px;
+    line-height: 80px;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+}
+
+nav li:after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 8px;
+    font-size: 0;
+    background: #1e64ce;
+
+    -webkit-transition: transform .5s;
+    -webkit-transition: transform .5s;
+       -moz-transition: transform .5s;
+        -ms-transition: transform .5s;
+         -o-transition: transform .5s;
+            transition: transform .5s;
+    -webkit-transform: scaleX(0);
+       -moz-transform: scaleX(0);
+        -ms-transform: scaleX(0);
+         -o-transform: scaleX(0);
+            transform: scaleX(0);/*是水平方向压缩到0*/
+}
+
+nav li:hover:after {
+    -webkit-transform: scaleX(1);
+       -moz-transform: scaleX(1);
+        -ms-transform: scaleX(1);
+         -o-transform: scaleX(1);
+            transform: scaleX(1);
+}
+	</textarea>
 	<div id="demo2">
 		<!-- 边框穿梭效果 -->
 		<div class="demo2-list">
@@ -28,9 +90,84 @@
 			</ul>
 		</div>
 	</div>
-	<p>
-		「&nbsp;&nbsp;hover边框穿梭效果&nbsp;&nbsp;」<br/>
+	<p class="title">
+		「&nbsp;&nbsp;hover边框穿梭效果&nbsp;&nbsp;」——显示CSS<br/>
 	</p>
+	<textarea class="code">.demo2-list {
+    padding: 6px 0;
+    font-size: 30px;
+    background: #ddd;
+}
+
+.demo2-list a {
+    text-decoration: none;
+    color: #000;
+}
+
+.demo2-list li {
+    position: relative;
+    width: 250px;
+    margin: 20px auto;
+    border: 2px solid #aaa;
+    line-height: 60px;
+    text-align: center;
+    background: #fff;
+
+    -webkit-transition: border-color .4s ease-in;
+       -moz-transition: border-color .4s ease-in;
+        -ms-transition: border-color .4s ease-in;
+         -o-transition: border-color .4s ease-in;
+            transition: border-color .4s ease-in;
+}
+
+.demo2-list li:before,
+.demo2-list li:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    -webkit-transition: border-color .4s ease-out, width .2s ease-out .2s, height .2s ease-out;
+       -moz-transition: border-color .4s ease-out, width .2s ease-out .2s, height .2s ease-out;
+        -ms-transition: border-color .4s ease-out, width .2s ease-out .2s, height .2s ease-out;
+         -o-transition: border-color .4s ease-out, width .2s ease-out .2s, height .2s ease-out;
+            transition: border-color .4s ease-out, width .2s ease-out .2s, height .2s ease-out;
+}
+
+.demo2-list li:before {
+    top: 0;
+    left: 0;
+    border-top: 2px solid transparent;
+    border-right: 2px solid transparent;
+}
+
+.demo2-list li:after {
+    right: 0;
+    bottom: 0;
+    border-bottom: 2px solid transparent;
+    border-left: 2px solid transparent;
+}
+
+.demo2-list li:hover {
+    border-color: #f15b5b;
+}
+
+.demo2-list li:hover::before,
+.demo2-list li:hover::after {
+    width: 100%;
+    height: 100%;
+    border-color: #f15b5b;
+
+    -webkit-transition: border-color .0s ease-in, height .2s ease-in .2s, width .2s ease-in;
+       -moz-transition: border-color .0s ease-in, height .2s ease-in .2s, width .2s ease-in;
+        -ms-transition: border-color .0s ease-in, height .2s ease-in .2s, width .2s ease-in;
+         -o-transition: border-color .0s ease-in, height .2s ease-in .2s, width .2s ease-in;
+            transition: border-color .0s ease-in, height .2s ease-in .2s, width .2s ease-in;
+}</textarea>
 	<div id="demo3">
 		<!-- 选中扩散效果 -->
 		<div class="demo3-list">
@@ -40,10 +177,86 @@
 			</ul>
 		</div>
 	</div>
-	<p>
-		「&nbsp;&nbsp;hover扩散标记效果&nbsp;&nbsp;」<br/>
+	<p class="title">
+		「&nbsp;&nbsp;hover扩散标记效果&nbsp;&nbsp;」——显示CSS<br/>
 		——若需要动画自适应变宽，可a的宽度用padding调整成适应文字宽度——
 	</p>
+	<textarea class="code">.demo3-list {
+    padding: 6px 0;
+    font-size: 30px;
+    background: #9350ff;
+}
+
+.demo3-list li {
+    width: 250px;
+    margin: 16px auto;
+    text-align: center;
+}
+
+.demo3-list a {
+    font: bold 34px/80px "Arial";
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: #000;
+}
+
+.demo3-list a:before,
+.demo3-list a:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 4px solid #7139cc;
+    opacity: 0;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    -webkit-transition: transform .5s ease, opacity .8s ease;
+       -moz-transition: transform .5s ease, opacity .8s ease;
+        -ms-transition: transform .5s ease, opacity .8s ease;
+         -o-transition: transform .5s ease, opacity .8s ease;
+            transition: transform .5s ease, opacity .8s ease;
+    -webkit-transform: scale(0,0);
+       -moz-transform: scale(0,0);
+        -ms-transform: scale(0,0);
+         -o-transform: scale(0,0);
+            transform: scale(0,0);
+}
+
+.demo3-list a:after {
+    -webkit-transition-delay: .1s;
+       -moz-transition-delay: .1s;
+        -ms-transition-delay: .1s;
+         -o-transition-delay: .1s;
+            transition-delay: .1s;
+}
+
+.demo3-list a:hover:before {
+    border: 8px solid #7139cc;
+    opacity: 1;
+
+    -webkit-transform: scale(.9,.6);
+       -moz-transform: scale(.9,.6);
+        -ms-transform: scale(.9,.6);
+         -o-transform: scale(.9,.6);
+            transform: scale(.9,.6);
+}
+
+.demo3-list a:hover:after {
+    border: 2px solid #7139cc;
+    opacity: 1;
+
+    -webkit-transform: scale(.82,.74);
+       -moz-transform: scale(.82,.74);
+        -ms-transform: scale(.82,.74);
+         -o-transform: scale(.82,.74);
+            transform: scale(.82,.74);
+}</textarea>
 	<div id="demo4">
 		<!-- 搜索框弹出效果 -->
 		<!-- 未解决缺陷，内部图标遮挡input，阻止动画生成。 -->
@@ -55,9 +268,82 @@
 			<span class="tips">鼠标移入图标中激活</span>
 		</div>
 	</div>
-    <p>
-    	「&nbsp;&nbsp;hover图标搜索框自动弹出效果&nbsp;&nbsp;」<br/>
+    <p class="title">
+    	「&nbsp;&nbsp;hover图标搜索框自动弹出效果&nbsp;&nbsp;」——显示CSS<br/>
     </p>
+    <textarea class="code">.search-bar {
+    position: relative;
+    padding: 20px 30px;
+    background: #fdd71c;
+}
+
+.search-bar .search {
+    display: inline-block;
+    position: relative;
+    height: 40px;
+    z-index: 99;
+}
+
+.search-bar input {
+    width: 16px;
+    height: 36px;
+    padding-left: 20px;
+    border: 2px solid #777;
+    font-size: 22px;
+    line-height: 36px;
+    color: #444;
+    outline: none;
+    background: #ccc;
+
+    -webkit-transition: background .5s, width .5s;
+       -moz-transition: background .5s, width .5s;
+        -ms-transition: background .5s, width .5s;
+         -o-transition: background .5s, width .5s;
+            transition: background .5s, width .5s;
+    -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+            border-radius: 20px;
+}
+
+.search-bar input::-webkit-input-placeholder {
+    color: #ffe04a;
+}
+/*设置input中默认字的样式↑↓*/
+.search-bar input:-ms-input-placeholder {
+    color: #ffe04a;
+}
+
+.search-bar input::-ms-clear {
+    display: none;
+}/*去除ie的input中的叉*/
+
+.fa-search {
+    font-size: 22px;
+    position: absolute;
+    right: 9px;
+    top: 8px;
+}
+
+.search-bar .tips {
+   position: absolute;
+   font-size: 22px;
+   top: 25px;
+   left: 80px;
+   color: #aaa;
+}
+
+/*@media screen and (-webkit-min-device-pixel-ratio:0) { 
+    .search-bar .fa {
+        /*vertical-align: middle;
+    }
+}*/
+/*兼容webkit内核，使搜索图标居中*/
+
+.search:hover input,
+.search input:focus {
+    width: 250px;
+    background: #fff;
+}</textarea>
 	<div id="demo5">
 		<!-- 选中元素框特效（下移，层叠） -->
 		<div class="demo5-box">
@@ -68,10 +354,90 @@
 			</div>
 		</div>
 	</div>
-	<p>
-	「&nbsp;&nbsp;hover元素滑移动画效果&nbsp;&nbsp;」<br/>
+	<p class="title">
+	「&nbsp;&nbsp;hover元素滑移动画效果&nbsp;&nbsp;」——显示CSS<br/>
 	——背景图片遮罩，利用降低图片透明度实现——
 	</p>
+	<textarea class="code">.demo5-box {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 300px;
+    border: 1px solid #bbb;
+    background: #000;
+
+    -webkit-transition: box-shadow .4s ease;
+       -moz-transition: box-shadow .4s ease;
+        -ms-transition: box-shadow .4s ease;
+         -o-transition: box-shadow .4s ease;
+            transition: box-shadow .4s ease;
+}
+
+
+.demo5-box .text-box {
+    position: absolute;
+    top: -100px;
+    width: 100%;
+    height: 100px;
+    padding: 10px 20px;
+    background: #ff98aa;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.demo5-box img {
+    width: 100%;
+    height: 100%;
+}
+
+.demo5-box h3 {
+    font: bold 18px/30px "Microsoft YaHei";
+    text-align: center;
+    letter-spacing: 3px;
+    color: #fff;
+}
+
+.demo5-box p {
+    font: 14px/20px "Microsoft YaHei";
+    margin-top: 6px;
+    color: #fff;
+}
+
+.demo5-box img,
+.demo5-box .text-box {
+    -webkit-transition: transform .4s ease-out, opacity .4s ease;
+       -moz-transition: transform .4s ease-out, opacity .4s ease;
+        -ms-transition: transform .4s ease-out, opacity .4s ease;
+         -o-transition: transform .4s ease-out, opacity .4s ease;
+            transition: transform .4s ease-out, opacity .4s ease;
+}
+
+.demo5-box:hover {
+    -webkit-box-shadow: 0 0 20px -5px;
+       -moz-box-shadow: 0 0 20px -5px;
+            box-shadow: 0 0 20px -5px;
+}
+
+
+.demo5-box:hover img {
+    opacity: .8;
+
+    -webkit-transform: translateY(26px);
+       -moz-transform: translateY(26px);
+        -ms-transform: translateY(26px);
+         -o-transform: translateY(26px);
+            transform: translateY(26px);
+}
+
+.demo5-box:hover .text-box {
+    -webkit-transform: translateY(100px);
+       -moz-transform: translateY(100px);
+        -ms-transform: translateY(100px);
+         -o-transform: translateY(100px);
+            transform: translateY(100px);
+}</textarea>
 	<div id="demo6">
 		<!-- 炫酷特效 -->
 		<div class="demo6-box">
@@ -90,9 +456,124 @@
 			</div>
 		</div>
 	</div>
-	<p>
-	「&nbsp;&nbsp;hover显示遮罩特效&nbsp;&nbsp;」
+	<p class="title">
+	「&nbsp;&nbsp;hover显示遮罩特效&nbsp;&nbsp;」——显示CSS
 	</p>
+	<textarea class="code">.demo6-box {
+    width: 100%;
+    height: 340px;
+    background: #000;
+
+    -webkit-box-shadow: 0 0 20px -4px;
+       -moz-box-shadow: 0 0 20px -4px;
+            box-shadow: 0 0 20px -4px;
+}
+
+.demo6-box .img-box {
+    position: relative;
+    height: 70%;
+}
+
+.demo6-box img {
+    width: 100%;
+    height: 100%;
+}
+
+.demo6-box span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    margin-top: 110px;
+    font-size: 18px;
+    text-align: center;
+    letter-spacing: 1px;
+    opacity: 0;
+    color: #fff;
+    cursor: pointer;
+}
+
+.demo6-box .text-box {
+    width: 100%;
+    height: 30%;
+    padding-left: 20px;
+    background: #fff;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.demo6-box h3 {
+    font: bold 20px/48px "Microsoft YaHei";
+}
+
+.demo6-box a {
+    color: #8a00ab;
+}
+
+
+.demo6-box p {
+    font: 16px/20px "Microsoft YaHei";
+    text-align: left;
+    color: #888;
+}
+
+.demo6-box .img-box:before,
+.demo6-box .img-box:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.demo6-box .img-box:before {
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+
+    transform: scale(0, .65);
+}
+
+.demo6-box .img-box:after {
+    border-right: 2px solid #fff;
+    border-left: 2px solid #fff;
+
+    transform: scale(.65, 0);
+}
+
+.demo6-box .img-box:before,
+.demo6-box .img-box:after,
+.demo6-box span,
+.demo6-box img {
+    -webkit-transition: opacity .8s ease, transform .8s ease, margin-top .4s ease;
+       -moz-transition: opacity .8s ease, transform .8s ease, margin-top .4s ease;
+        -ms-transition: opacity .8s ease, transform .8s ease, margin-top .4s ease;
+         -o-transition: opacity .8s ease, transform .8s ease, margin-top .4s ease;
+            transition: opacity .8s ease, transform .8s ease, margin-top .8s ease;
+}
+
+.demo6-box:hover .img-box:before,
+.demo6-box:hover .img-box:after {
+    opacity: 1;
+
+    transform: scale(.7,.7);
+}
+
+.demo6-box:hover span {
+    margin-top: 86px;
+    opacity: 1;
+}
+
+.demo6-box:hover img {
+    opacity: .6;
+}</textarea>
 	<div id="demo7">
 		<!-- 炫酷特效 -->
 		<div class="demo7-box">
@@ -106,17 +587,99 @@
 			</div>
 		</div>
 	</div>
-	<p>
-	「&nbsp;&nbsp;hover升起特效&nbsp;&nbsp;」
+	<p class="title">
+	「&nbsp;&nbsp;hover升起特效&nbsp;&nbsp;」——显示CSS
 	</p>
+	<textarea class="code">#demo7 {
+    -webkit-perspective: 800px;
+       -moz-perspective: 800px;
+        -ms-perspective: 800px;
+            perspective: 800px;
+}
+
+.demo7-box {
+    width: 100%;
+    height: 340px;
+    border: 2px solid #ddd;
+    background: #000;
+
+    -webkit-transition: transform .4s ease, box-shadow .2s linear;
+       -moz-transition: transform .4s ease, box-shadow .2s linear;
+        -ms-transition: transform .4s ease, box-shadow .2s linear;
+         -o-transition: transform .4s ease, box-shadow .2s linear;
+            transition: transform .4s ease, box-shadow .2s linear;
+
+    -webkit-transform-style: preserve-3d;
+       -moz-transform-style: preserve-3d;
+        -ms-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+}
+
+.demo7-box .img-box {
+    height: 70%;
+}
+
+.demo7-box img {
+    width: 100%;
+    height: 100%;
+}
+
+.demo7-box .text-box {
+    width: 100%;
+    height: 30%;
+    padding-left: 20px;
+    background: #fff;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.demo7-box h3 {
+    font: bold 20px/48px "Microsoft YaHei";
+}
+
+.demo7-box a {
+    color: #8a00ab;
+}
 
 
+.demo7-box p {
+    font: 16px/20px "Microsoft YaHei";
+    text-align: left;
+    color: #888;
+}
 
-	<p>
-		注意事项：
-		1、前后必须有相同属性，才会在移入和移出时都有动画效果。
-		2、若移入移出时，动画效果不完全一致（一般比如有先后顺序的），移入动画的transition放在hover类里，移除动画的transition放在原本的元素里。（因为当shover时，新的transition属性会覆盖原来的。）
-	</p>
+.demo7-box:hover {
+    -webkit-transform: translateZ(50px);
+       -moz-transform: translateZ(50px);
+        -ms-transform: translateZ(50px);
+         -o-transform: translateZ(50px);
+            transform: translateZ(50px);
+    -webkit-box-shadow: 0 0 30px #ccc;
+       -moz-box-shadow: 0 0 30px #ccc;
+            box-shadow: 0 0 30px #ccc;
+}</textarea>
+
 </div>
 </body>
+<script>
+	window.onload = function (){
+		var title = document.getElementsByClassName("title");
+		var i;
+		for (i=0;i<title.length;i++) {
+			(function (i) {
+				title[i].onclick = function () {
+					var item = document.getElementsByClassName("code")[i];
+					if (item.style.display === 'block') {
+						item.style.display = "none";
+					} else {
+                        item.style.display = "block";
+                    }
+				}
+			}) (i);
+		}
+
+	}
+</script>
 </html>
